src/theme/index.css
*, *::before, *::after {
  border-collapse: inherit;
  box-sizing: inherit;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

[hidden] {
  display: none !important;
}

html {
  border-collapse: collapse;
  box-sizing: border-box;
  /* min-height: 100%; */
  overflow-x: hidden;
}

body, #root {
  height: 100%;
}

body {
  background: rgb(247, 247, 247);
  margin: 0;
  padding: 0;
}

#root {
  display: flex;
  flex-flow: column nowrap;
  justify-content: space-between;
  margin: 0 auto;
  position: relative
}

*:not(body) {
  background-clip: border-box;
  background-size: cover;
  background-origin: border-box;
  background-position: center;
  background-repeat: no-repeat;
}

a {
  text-decoration: none;
}

button {
  white-space: nowrap;
}

h1 {
  font-size: 2rem;
  font-weight: 300;
}

h2 {
  font-size: 1.8rem;
  font-weight: 400;
}

h3 {
  font-size: 1.6rem;
  font-weight: 400;
}

h4 {
  font-size: 1.4rem;
  font-weight: 500;
}

h5 {
  font-size: 1.2rem;
  font-weight: 700;
}

h6 {
  font-size: 1rem;
  font-weight: 500;
  margin: 0;
}

fieldset {
  border: none;
  display: flex;
  flex-flow: column nowrap;
  margin: 0;
  padding: 0;
}

label {
  font-size: 0.75rem;
  font-weight: 400;
  line-height: 1;
  padding: 0;
}

ol, ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li {
  text-decoration: none;
}

ul li:last-child a {
  margin-right: 0;
}

.fade-exit {
  opacity: 1;
}

.fade-exit-active {
  opacity: 0;
  transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1);
}

.hide {
  display: none;
}

@media screen and (min-width: 48rem) {
  h1 {
      font-size: 2.5rem;
  }

  h2 {
      font-size: 2.25rem;
  }

  h3 {
      font-size: 2rem;
  }

  h4 {
      font-size: 1.75rem;
  }

  h5 {
      font-size: 1.5rem;
  }

  h6 {
      font-size: 1.25rem;
  }
}

